--- a/index.html
+++ b/index.html
@@ -7,3 +7,6 @@
 <p>Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
 </body>
+
+
+</html>
