added images of first row birds

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
+<head>
+</head>
+
 <body>
 
-<h1>danger birds</h1>
+<h1 class="text-center siteheader">danger birds</h1>
 
 <p>Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
+
+<div class="top-row-birds">
+	<img src="images/ivorybill.png" class="crane"/>
+	<img src="images/plover.png" class="crane"/>
+	<img src="images/crane.png" class="crane"/>
+</div>
+
+
+
 
 </body>
 
