added first row bird names

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 </div>
 
 
-
+<div class="top-row-bird-names">
+	<h3>IVORY-BILLED WOODPECKER</h3>
+	<h3>PIPING PLOVER</h3>
+	<h3>WHOOPING CRANE</h3>
+</div>
 
 </body>
 
