fixed ivory bird title

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<h3>NENE</h3>
 </div>
 
-<h1 class="Ivory-billed-title">IVORY_BILLED WOODPECKER</h1>
+<h1 class="Ivory-billed-title">IVORY BILLED WOODPECKER</h1>
 <div class="Ivory-section">
 
 <p class="bird-info">
