--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 <body>
 
-<h1 class="text-center siteheader">danger birds</h1>
+<h1 class="text-center siteheader">ENDANGERED BIRDS</h1>
 
 <p class="intro-message">Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
 <div class="top-row-birds">
-	<img src="images/ivorybill.png" class="crane"/>
-	<img src="images/plover.png" class="crane"/>
-	<img src="images/crane.png" class="crane"/>
+	<img src="images/ivorybill.png" class="crane" />
+	<img src="images/plover.png" class="crane" />
+	<img src="images/crane.png" class="crane" />
 </div>
 
 
@@ -26,9 +26,9 @@
 </div>
 
 <div class="bottom-row-birds">
-	<img src="images/iiwi.png" class="crane"/>
-	<img src="images/warbler.png" class="crane"/>
-	<img src="images/nene.png" class="crane"/>
+	<img src="images/iiwi.png" class="crane" />
+	<img src="images/warbler.png" class="crane" />
+	<img src="images/nene.png" class="crane" />
 </div>
 
 <div class="bottom-row-bird-names">
@@ -41,7 +41,7 @@
 <div class="Ivory-section">
 
 <p class="bird-info">
-	The Ivory-billed woodpecker was initially declared extinct in 1996 by the International Union for the Conservation of Nature and Natural Resources. Once again, humans became a major factor due to the clearing of its natural habitat. By 1941 the population was estimated around 24 total birds in five spread out areas. It was recorded that the woodpeckers ranged from east Texas to North Carolina, southern Illinois through Florida and south to Cuba. While believed to be extinct,there have been numerous rumors floating around suggesting otherwise. In April of 2005, a video was confirmed to have recorded a live ivory-billed woodpecker, shifting its status from extinct to critically endangered. After the video, biologists and scientists flocked to the location, and after a year the Big Woods Conservation Partnership was formed in efforts of spreading the awareness of the bird’s rarity.
+	The Ivory-billed woodpecker was initially declared extinct in 1996 by the International Union for the Conservation of Nature and Natural Resources. Once again, humans became a major factor due to the clearing of its natural habitat. By 1941 the population was estimated around 24 total birds in five spread out areas. It was recorded that the woodpeckers ranged from east Texas to North Carolina, southern Illinois through Florida and south to Cuba. While believed to be extinct,there have been numerous rumors floating around suggesting otherwise. In April of 2005, a video was confirmed to have recorded a live ivory-billed woodpecker, shifting its status from extinct to critically endangered. After the video, biologists and scientists flocked to the location, and after a year the Big Woods Conservation Partnership was formed in efforts of spreading the awareness of the bird's rarity.
 </p>
 </div>
 
@@ -49,7 +49,7 @@
 <div class="Piping-section">
 
 <p class="bird-info">
-	Federally listed as threatened and endangered in 1986, the Piping plovers are small shorebirds that’s population has drastically declined past recent decades. While the loss of habitat has been a big contributor, the other factor in the population decline is due to nest disturbance. Piping plovers are incredibly sensitive to humans, and if they feel they are threatened in any way the parent birds will abandon the nest. They are found in flat, open beaches with little to no grass or vegetation, but nesting grounds may include small creeks and wetlands. In order to keep tabs on the population’s numbers, the USFWS conducts habitat protection programs and has developed action recovery plans to help the plover recover. The piping plovers perform courtship rituals in order to find their mates, and as it progresses the two may form a pair bond.
+	Federally listed as threatened and endangered in 1986, the Piping plovers are small shorebirds that's population has drastically declined past recent decades. While the loss of habitat has been a big contributor, the other factor in the population decline is due to nest disturbance. Piping plovers are incredibly sensitive to humans, and if they feel they are threatened in any way the parent birds will abandon the nest. They are found in flat, open beaches with little to no grass or vegetation, but nesting grounds may include small creeks and wetlands. In order to keep tabs on the population's numbers, the USFWS conducts habitat protection programs and has developed action recovery plans to help the plover recover. The piping plovers perform courtship rituals in order to find their mates, and as it progresses the two may form a pair bond.
 	
 </p>
 </div>
@@ -65,7 +65,7 @@
 <h1 class="iiwi-title">WHOOPING CRANE</h1>
 <div class="iiwi-section">
 	<p class="bird-info">
-	Despite over 99% of the I’iwi population residing on the main Hawaii island and east Maui, few I’iwi fragments are left on the O’ahu and Moloka’I islands. The US Fish and Wildlife Service has recently decided to conduct a 12-month review of the bird to determine whether it will be protected under the Endangered Species Act. Common factors for the I’iwi population drop are climate change, habitat destruction and disease (such as avian malaria). The I’iwi frequents forest canopies in search for ‘ohi’a lehua blossoms, as their primary diet consists of nectar. At least 20 types of the Hawaiian honeycreepers are already extinct.
+	Despite over 99% of the I'iwi population residing on the main Hawaii island and east Maui, few I'iwi fragments are left on the O'ahu and Moloka'i islands. The US Fish and Wildlife Service has recently decided to conduct a 12-month review of the bird to determine whether it will be protected under the Endangered Species Act. Common factors for the I'iwi population drop are climate change, habitat destruction and disease (such as avian malaria). The I’iwi frequents forest canopies in search for 'ohi'a lehua blossoms, as their primary diet consists of nectar. At least 20 types of the Hawaiian honeycreepers are already extinct.
 	
 	
 </p>
@@ -74,7 +74,7 @@
 <h1 class="warbler-title">GOLDEN CHEEKED WARBLER</h1>
 <div class="warbler-section">
 	<p class="bird-info">
-	The golden-cheeked warbler was listed as endangered in 1990. The only time they can be found in the United States is in the oak-juniper woodlands of Central Texas. Once again, a big threat to the warbler’s survival is the loss of its natural habitat: most of the juniper woodlands have been cleared for livestock and urban expansion, which reduces any nesting opportunities. There are several habitat restoration efforts that have continued to help stabilize the warbler’s population as well. The U.S. Army at Fort Hood was able to protect the largest patch of oak juniper trees, but in 2007 they implemented the “Recovery Credit System”, selling conservation credits to surrounding landowners. The protected area, at 60,000 acres, would be cut to 10,000 acres. This proves to be difficult for groups monitoring and rehabilitating the species.
+	The golden-cheeked warbler was listed as endangered in 1990. The only time they can be found in the United States is in the oak-juniper woodlands of Central Texas. Once again, a big threat to the warbler's survival is the loss of its natural habitat: most of the juniper woodlands have been cleared for livestock and urban expansion, which reduces any nesting opportunities. There are several habitat restoration efforts that have continued to help stabilize the warbler's population as well. The U.S. Army at Fort Hood was able to protect the largest patch of oak juniper trees, but in 2007 they implemented the “Recovery Credit System”, selling conservation credits to surrounding landowners. The protected area, at 60,000 acres, would be cut to 10,000 acres. This proves to be difficult for groups monitoring and rehabilitating the species.
 	
 	
 </p>
