changes made to index file and own stylesheet; edited h1 class, messing with header dimensions, circles lined up

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h1 class="text-center siteheader">ENDANGERED BIRDS</h1>
+<h1 class="siteheader">ENDANGERED BIRDS</h1>
 
 <p class="intro-message">Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
@@ -17,7 +17,6 @@
 	<img src="images/plover.png" class="crane" />
 	<img src="images/crane.png" class="crane" />
 </div>
-
 
 <div class="top-row-bird-names">
 	<h3>IVORY-BILLED WOODPECKER</h3>
