--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 	<h3>NENE</h3>
 </div>
 
-<h1 class="Ivory-billed-title">IVORY BILLED WOODPECKER</h1>
-<div class="Ivory-section">
-<img src="images/ivory_bill/ivorybill_text.png" class="ivorybill_text_img"/>
+<h1 class="Ivory-billed-title title">IVORY BILLED WOODPECKER</h1>
+<div class="Ivory-section sections">
+<img src="images/ivory_bill/ivorybill_text.png" class="ivorybill_text_img text_img"/>
 
 
 <p class="bird-info">
@@ -56,9 +56,9 @@
 </p>
 </div>
 
-<h1 class="Piping-plover-title">PIPING PLOVER</h1>
-<div class="Piping-section">
-<img src="images/plover/plover_text.png" class="plover_text_img"/>
+<h1 class="Piping-plover-title title">PIPING PLOVER</h1>
+<div class="Piping-section sections">
+<img src="images/plover/plover_text.png" class="plover_text_img text_img"/>
 
 
 <p class="bird-info">
@@ -67,9 +67,9 @@
 </p>
 </div>
 
-<h1 class="Crane-title">WHOOPING CRANE</h1>
-<div class="crane-section">
-<img src="images/whoop_crane/crane_text.png" class="crane_text_img"/>
+<h1 class="Crane-title title">WHOOPING CRANE</h1>
+<div class="crane-section sections">
+<img src="images/whoop_crane/crane_text.png" class="crane_text_img text_img"/>
 
 	<p class="bird-info">
 	Despite being re-introduced to the wild in several states of the US, the Whooping Crane was first listed as being an endangered species in 1967. The main threats that the crane has faced are poaching, egg hunting and the loss of wetlands (which are their preferred nesting habitats). To help rebuild the species, there are up to 12 locations that hold whooping cranes in captivity. In 1941, due to continuous habitat loss and hunting, there were only 15 whooping cranes left in the world. As the numbers continued to grow the younger cranes had no idea how to migrate, biologists constructed a lightweight plane to guide them from Florida to their breeding grounds in Wisconsin.
@@ -77,9 +77,9 @@
 </p>
 </div>
 
-<h1 class="iiwi-title">I'iwi</h1>
-<div class="iiwi-section">
-<img src="images/iiwi/iiwi_text.png" class="iiwi_text_img"/>
+<h1 class="iiwi-title title">I'iwi</h1>
+<div class="iiwi-section sections">
+<img src="images/iiwi/iiwi_text.png" class="iiwi_text_img text_img"/>
 	<p class="bird-info">
 	Despite over 99% of the I'iwi population residing on the main Hawaii island and east Maui, few I'iwi fragments are left on the O'ahu and Moloka'i islands. The US Fish and Wildlife Service has recently decided to conduct a 12-month review of the bird to determine whether it will be protected under the Endangered Species Act. Common factors for the I'iwi population drop are climate change, habitat destruction and disease (such as avian malaria). The I’iwi frequents forest canopies in search for 'ohi'a lehua blossoms, as their primary diet consists of nectar. At least 20 types of the Hawaiian honeycreepers are already extinct.
 	
@@ -87,9 +87,9 @@
 </p>
 </div>
 
-<h1 class="warbler-title">GOLDEN CHEEKED WARBLER</h1>
-<div class="warbler-section">
-<img src="images/gold_cheek/warbler_text.png" class="warbler_text_img"/>
+<h1 class="warbler-title title">GOLDEN CHEEKED WARBLER</h1>
+<div class="warbler-section sections">
+<img src="images/gold_cheek/warbler_text.png" class="warbler_text_img text_img"/>
 
 	<p class="bird-info">
 	The golden-cheeked warbler was listed as endangered in 1990. The only time they can be found in the United States is in the oak-juniper woodlands of Central Texas. Once again, a big threat to the warbler's survival is the loss of its natural habitat: most of the juniper woodlands have been cleared for livestock and urban expansion, which reduces any nesting opportunities. There are several habitat restoration efforts that have continued to help stabilize the warbler's population as well. The U.S. Army at Fort Hood was able to protect the largest patch of oak juniper trees, but in 2007 they implemented the “Recovery Credit System”, selling conservation credits to surrounding landowners. The protected area, at 60,000 acres, would be cut to 10,000 acres. This proves to be difficult for groups monitoring and rehabilitating the species.
@@ -98,9 +98,9 @@
 </p>
 </div>
 
-<h1 class="nene-title">NENE</h1>
-<div class="nene-section">
-<img src="images/nene/nene_text.png" class="nene_text_img"/>
+<h1 class="nene-title title">NENE</h1>
+<div class="nene-section sections">
+<img src="images/nene/nene_text.png" class="nene_text_img text_img"/>
 	<p class="bird-info">
 	Listed as an endangered species in 1967 under the Federal Endangered Species Act with recovery plan being published in 1983. The population once overflowed on the largest island before Captain James Cook arrived in 1778. The Maui population was extinct before 1890, and the decline accelerated during 1850 to 1900 from aggressive hunting and collecting of eggs. As they like to nest in golf courses, another contributing danger to the species are stray golf balls. Over 2,700 nene were released statewide on either public or private land managed by cooperative agreements between State and Federal resources in 2009. In 1951, there was an estimated 30 birds left of the population..
 	
