Revert "Revert "top placement""
This reverts commit e68c94b2f9ef9a92081606c814a9e2657ac7a3f1.

--- a/index.html
+++ b/index.html
@@ -13,38 +13,29 @@
 <p class="intro-message">Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
 <div class="top-row-birds">
-	<img src="images/ivorybill.png" class="crane" />
-	<img src="images/plover.png" class="crane" />
-	<img src="images/crane.png" class="crane" />
+		<img src="images/ivorybill.png" class="crane" />	
+		<img src="images/plover.png" class="crane" />
+		<img src="images/crane.png" class="crane" />
 </div>
 
-<div class="top-row-bird-names bird-1">
+<div class="names-top">
 	<h3>IVORY-BILLED WOODPECKER</h3>
-</div>
-<div class="top-row-bird-names bird-2">
 	<h3>PIPING PLOVER</h3>
-</div>
-
-<div class="top-row-bird-names bird-3">
 	<h3>WHOOPING CRANE</h3>
 </div>
 
 <div class="bottom-row-birds">
-	<img src="images/iiwi.png" class="crane" />
-	<img src="images/warbler.png" class="crane" />
-	<img src="images/nene.png" class="crane" />
+		<img src="images/iiwi.png" class="crane" />
+		<img src="images/warbler.png" class="crane" />
+		<img src="images/nene.png" class="crane" />
 </div>
 
-<div class="bottom-row-bird-names bird-4">
-
+<div class="names-bottom">
 	<h3>I'IWI</h3>
-</div>
-<div class="bottom-row-bird-names bird-5">
 	<h3>GOLDEN-CHEEKED WARBLER</h3>
-</div>
-<div class="bottom-row-bird-names bird-6">
 	<h3>NENE</h3>
 </div>
+
 
 <h1 class="Ivory-billed-title title">IVORY BILLED WOODPECKER</h1>
 <div class="Ivory-section sections">
