--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 	<img src="images/crane.png" class="crane" />
 </div>
 
-<div class="top-row-bird-names bird-1">
+<div class="top-names">
 	<h3>IVORY-BILLED WOODPECKER</h3>
 </div>
-<div class="top-row-bird-names bird-2">
+
+<div class="top-names">
 	<h3>PIPING PLOVER</h3>
 </div>
 
-<div class="top-row-bird-names bird-3">
+<div class="top-names">
 	<h3>WHOOPING CRANE</h3>
 </div>
 
@@ -35,14 +36,15 @@
 	<img src="images/nene.png" class="crane" />
 </div>
 
-<div class="bottom-row-bird-names bird-4">
-
+<div class="bottom-names">
 	<h3>I'IWI</h3>
 </div>
-<div class="bottom-row-bird-names bird-5">
+
+<div class="bottom-names">
 	<h3>GOLDEN-CHEEKED WARBLER</h3>
 </div>
-<div class="bottom-row-bird-names bird-6">
+
+<div class="bottom-names">
 	<h3>NENE</h3>
 </div>
 
