--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <p class="intro-message">Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
-<div class="top-row-birds">
+<div class="top-birds">
 	<img src="images/ivorybill.png" class="crane" />
 	<img src="images/plover.png" class="crane" />
 	<img src="images/crane.png" class="crane" />
@@ -20,17 +20,11 @@
 
 <div class="top-names">
 	<h3>IVORY-BILLED WOODPECKER</h3>
-</div>
-
-<div class="top-names">
 	<h3>PIPING PLOVER</h3>
-</div>
-
-<div class="top-names">
 	<h3>WHOOPING CRANE</h3>
 </div>
 
-<div class="bottom-row-birds">
+<div class="bottom-birds">
 	<img src="images/iiwi.png" class="crane" />
 	<img src="images/warbler.png" class="crane" />
 	<img src="images/nene.png" class="crane" />
@@ -38,13 +32,7 @@
 
 <div class="bottom-names">
 	<h3>I'IWI</h3>
-</div>
-
-<div class="bottom-names">
 	<h3>GOLDEN-CHEEKED WARBLER</h3>
-</div>
-
-<div class="bottom-names">
 	<h3>NENE</h3>
 </div>
 
