--- a/index.html
+++ b/index.html
@@ -12,29 +12,37 @@
 
 <p class="intro-message">Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
-<div class="top-birds">
+
+	<div class="ivory">
 	<img src="images/ivorybill.png" class="crane" />
+	<h3 class="name">IVORY-BILLED WOODPECKER</h3>
+</div>
+
+<div class="plover">
 	<img src="images/plover.png" class="crane" />
+	<h3 class="name">PIPING PLOVER</h3>
+</div>
+
+<div class="whooping">
 	<img src="images/crane.png" class="crane" />
+	<h3 class="name">WHOOPING CRANE</h3>
 </div>
 
-<div class="top-names">
-	<h3>IVORY-BILLED WOODPECKER</h3>
-	<h3>PIPING PLOVER</h3>
-	<h3>WHOOPING CRANE</h3>
-</div>
-
-<div class="bottom-birds">
+<div class="iiiwi">
 	<img src="images/iiwi.png" class="crane" />
-	<img src="images/warbler.png" class="crane" />
-	<img src="images/nene.png" class="crane" />
+	<h3 class="name">I'IWI</h3>
 </div>
 
-<div class="bottom-names">
-	<h3>I'IWI</h3>
-	<h3>GOLDEN-CHEEKED WARBLER</h3>
-	<h3>NENE</h3>
+<div class="warbler">
+	<img src="images/warbler.png" class="crane" />
+	<h3 class="name">GOLDEN-CHEEKED WARBLER</h3>
 </div>
+<div class="nene">
+	<img src="images/nene.png" class="crane" />
+	<h3 class="name">NENE</h3>
+</div>
+
+
 
 <h1 class="Ivory-billed-title title">IVORY BILLED WOODPECKER</h1>
 <div class="Ivory-section sections">
