--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 
 	<div class="ivory">
-	<img src="images/ivorybill.png" class="crane" />
+	<a href="#bird-1"><img src="images/ivorybill.png" class="crane" /></a>
 	<h3 class="name">IVORY-BILLED WOODPECKER</h3>
 </div>
 
 <div class="plover">
-	<img src="images/plover.png" class="crane" />
+	<a href="#bird-2"><img src="images/plover.png" class="crane" /></a>
 	<h3 class="name">PIPING PLOVER</h3>
 </div>
 
 <div class="whooping">
-	<img src="images/crane.png" class="crane" />
+	<a href="#bird-3"><img src="images/crane.png" class="crane" /></a>
 	<h3 class="name">WHOOPING CRANE</h3>
 </div>
 
@@ -50,7 +50,9 @@
 
 
 <p class="bird-info">
+	<p id="bird-1">
 	The Ivory-billed woodpecker was initially declared extinct in 1996 by the International Union for the Conservation of Nature and Natural Resources. Once again, humans became a major factor due to the clearing of its natural habitat. By 1941 the population was estimated around 24 total birds in five spread out areas. It was recorded that the woodpeckers ranged from east Texas to North Carolina, southern Illinois through Florida and south to Cuba. While believed to be extinct,there have been numerous rumors floating around suggesting otherwise. In April of 2005, a video was confirmed to have recorded a live ivory-billed woodpecker, shifting its status from extinct to critically endangered. After the video, biologists and scientists flocked to the location, and after a year the Big Woods Conservation Partnership was formed in efforts of spreading the awareness of the bird's rarity.
+</p>
 </p>
 </div>
 
@@ -58,10 +60,10 @@
 <div class="Piping-section sections">
 <img src="images/plover/plover_text.png" class="plover_text_img text_img"/>
 
-
 <p class="bird-info">
+	<p id="bird-2">
 	Federally listed as threatened and endangered in 1986, the Piping plovers are small shorebirds that's population has drastically declined past recent decades. While the loss of habitat has been a big contributor, the other factor in the population decline is due to nest disturbance. Piping plovers are incredibly sensitive to humans, and if they feel they are threatened in any way the parent birds will abandon the nest. They are found in flat, open beaches with little to no grass or vegetation, but nesting grounds may include small creeks and wetlands. In order to keep tabs on the population's numbers, the USFWS conducts habitat protection programs and has developed action recovery plans to help the plover recover. The piping plovers perform courtship rituals in order to find their mates, and as it progresses the two may form a pair bond.
-	
+	</p>
 </p>
 </div>
 
@@ -69,9 +71,10 @@
 <div class="crane-section sections">
 <img src="images/whoop_crane/crane_text.png" class="crane_text_img text_img"/>
 
-	<p class="bird-info">
+<p class="bird-info">
+	<p id="bird-3">
 	Despite being re-introduced to the wild in several states of the US, the Whooping Crane was first listed as being an endangered species in 1967. The main threats that the crane has faced are poaching, egg hunting and the loss of wetlands (which are their preferred nesting habitats). To help rebuild the species, there are up to 12 locations that hold whooping cranes in captivity. In 1941, due to continuous habitat loss and hunting, there were only 15 whooping cranes left in the world. As the numbers continued to grow the younger cranes had no idea how to migrate, biologists constructed a lightweight plane to guide them from Florida to their breeding grounds in Wisconsin.
-	
+	</p>
 </p>
 </div>
 
