--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<link href='http://fonts.googleapis.com/css?family=Crimson+Text:600,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="stylesheet2.css">
+	<title>EN-DANGER BIRDS</title>
 </head>
 
 <body>
 
-<h1 class="siteheader">ENDANGERED BIRDS</h1>
+<h1 class="siteheader" id="top">
+	ENDANGERED BIRDS
+</h1>
 
 <p class="intro-message">Six different species of birds were once found all around North America. While some cases are due to natural causes, such as predators or disease, the most common explanation would be us. Humans have hunted, taken eggs and destroyed the nests and environments that were home to these six and many other species of animals.</p>
 
@@ -29,16 +32,16 @@
 </div>
 
 <div class="iiiwi">
-	<img src="images/iiwi.png" class="crane" />
+	<a href="#bird-4"><img src="images/iiwi.png" class="crane" /></a>
 	<h3 class="name">I'IWI</h3>
 </div>
 
 <div class="warbler">
-	<img src="images/warbler.png" class="crane" />
+	<a href="#bird-5"><img src="images/warbler.png" class="crane" /></a>
 	<h3 class="name">GOLDEN-CHEEKED WARBLER</h3>
 </div>
 <div class="nene">
-	<img src="images/nene.png" class="crane" />
+	<a href="#bird-6"><img src="images/nene.png" class="crane" /></a>
 	<h3 class="name">NENE</h3>
 </div>
 
@@ -48,11 +51,8 @@
 <div class="Ivory-section sections">
 <img src="images/ivory_bill/ivorybill_text.png" class="ivorybill_text_img text_img"/>
 
-
-<p class="bird-info">
-	<p id="bird-1">
-	The Ivory-billed woodpecker was initially declared extinct in 1996 by the International Union for the Conservation of Nature and Natural Resources. Once again, humans became a major factor due to the clearing of its natural habitat. By 1941 the population was estimated around 24 total birds in five spread out areas. It was recorded that the woodpeckers ranged from east Texas to North Carolina, southern Illinois through Florida and south to Cuba. While believed to be extinct,there have been numerous rumors floating around suggesting otherwise. In April of 2005, a video was confirmed to have recorded a live ivory-billed woodpecker, shifting its status from extinct to critically endangered. After the video, biologists and scientists flocked to the location, and after a year the Big Woods Conservation Partnership was formed in efforts of spreading the awareness of the bird's rarity.
-</p>
+<p class="bird-info" id="bird-1">
+	The Ivory-billed woodpecker was initially declared extinct in 1996 by the International Union for the Conservation of Nature and Natural Resources. Once again, humans became a major factor due to the clearing of its natural habitat. By 1941 the population was estimated around 24 total birds in five spread out areas. It was recorded that the woodpeckers ranged from east Texas to North Carolina, southern Illinois through Florida and south to Cuba. While believed to be extinct,there have been numerous rumors floating around suggesting otherwise. In April of 2005, a video was confirmed to have recorded a live ivory-billed woodpecker, shifting its status from extinct to critically endangered. After the video, biologists and scientists flocked to the location, and after a year the Big Woods Conservation Partnership was formed in efforts of spreading the awareness of the bird's rarity. <a href="#top">Back to top</a>. 
 </p>
 </div>
 
@@ -60,10 +60,8 @@
 <div class="Piping-section sections">
 <img src="images/plover/plover_text.png" class="plover_text_img text_img"/>
 
-<p class="bird-info">
-	<p id="bird-2">
-	Federally listed as threatened and endangered in 1986, the Piping plovers are small shorebirds that's population has drastically declined past recent decades. While the loss of habitat has been a big contributor, the other factor in the population decline is due to nest disturbance. Piping plovers are incredibly sensitive to humans, and if they feel they are threatened in any way the parent birds will abandon the nest. They are found in flat, open beaches with little to no grass or vegetation, but nesting grounds may include small creeks and wetlands. In order to keep tabs on the population's numbers, the USFWS conducts habitat protection programs and has developed action recovery plans to help the plover recover. The piping plovers perform courtship rituals in order to find their mates, and as it progresses the two may form a pair bond.
-	</p>
+<p class="bird-info" id="bird-2">
+	Federally listed as threatened and endangered in 1986, the Piping plovers are small shorebirds that's population has drastically declined past recent decades. While the loss of habitat has been a big contributor, the other factor in the population decline is due to nest disturbance. Piping plovers are incredibly sensitive to humans, and if they feel they are threatened in any way the parent birds will abandon the nest. They are found in flat, open beaches with little to no grass or vegetation, but nesting grounds may include small creeks and wetlands. In order to keep tabs on the population's numbers, the USFWS conducts habitat protection programs and has developed action recovery plans to help the plover recover. The piping plovers perform courtship rituals in order to find their mates, and as it progresses the two may form a pair bond. <a href="#top">Back to top</a>.
 </p>
 </div>
 
@@ -71,20 +69,17 @@
 <div class="crane-section sections">
 <img src="images/whoop_crane/crane_text.png" class="crane_text_img text_img"/>
 
-<p class="bird-info">
-	<p id="bird-3">
-	Despite being re-introduced to the wild in several states of the US, the Whooping Crane was first listed as being an endangered species in 1967. The main threats that the crane has faced are poaching, egg hunting and the loss of wetlands (which are their preferred nesting habitats). To help rebuild the species, there are up to 12 locations that hold whooping cranes in captivity. In 1941, due to continuous habitat loss and hunting, there were only 15 whooping cranes left in the world. As the numbers continued to grow the younger cranes had no idea how to migrate, biologists constructed a lightweight plane to guide them from Florida to their breeding grounds in Wisconsin.
-	</p>
+<p class="bird-info" id="bird-3">
+	Despite being re-introduced to the wild in several states of the US, the Whooping Crane was first listed as being an endangered species in 1967. The main threats that the crane has faced are poaching, egg hunting and the loss of wetlands (which are their preferred nesting habitats). To help rebuild the species, there are up to 12 locations that hold whooping cranes in captivity. In 1941, due to continuous habitat loss and hunting, there were only 15 whooping cranes left in the world. As the numbers continued to grow the younger cranes had no idea how to migrate, biologists constructed a lightweight plane to guide them from Florida to their breeding grounds in Wisconsin. <a href="#top">Back to top</a>.
 </p>
 </div>
 
 <h1 class="iiwi-title title">I'iwi</h1>
 <div class="iiwi-section sections">
 <img src="images/iiwi/iiwi_text.png" class="iiwi_text_img text_img"/>
-	<p class="bird-info">
-	Despite over 99% of the I'iwi population residing on the main Hawaii island and east Maui, few I'iwi fragments are left on the O'ahu and Moloka'i islands. The US Fish and Wildlife Service has recently decided to conduct a 12-month review of the bird to determine whether it will be protected under the Endangered Species Act. Common factors for the I'iwi population drop are climate change, habitat destruction and disease (such as avian malaria). The I’iwi frequents forest canopies in search for 'ohi'a lehua blossoms, as their primary diet consists of nectar. At least 20 types of the Hawaiian honeycreepers are already extinct.
-	
-	
+
+<p class="bird-info" id="bird-4">
+	Despite over 99% of the I'iwi population residing on the main Hawaii island and east Maui, few I'iwi fragments are left on the O'ahu and Moloka'i islands. The US Fish and Wildlife Service has recently decided to conduct a 12-month review of the bird to determine whether it will be protected under the Endangered Species Act. Common factors for the I'iwi population drop are climate change, habitat destruction and disease (such as avian malaria). The I’iwi frequents forest canopies in search for 'ohi'a lehua blossoms, as their primary diet consists of nectar. At least 20 types of the Hawaiian honeycreepers are already extinct. <a href="#top">Back to top</a>.
 </p>
 </div>
 
@@ -92,20 +87,17 @@
 <div class="warbler-section sections">
 <img src="images/gold_cheek/warbler_text.png" class="warbler_text_img text_img"/>
 
-	<p class="bird-info">
-	The golden-cheeked warbler was listed as endangered in 1990. The only time they can be found in the United States is in the oak-juniper woodlands of Central Texas. Once again, a big threat to the warbler's survival is the loss of its natural habitat: most of the juniper woodlands have been cleared for livestock and urban expansion, which reduces any nesting opportunities. There are several habitat restoration efforts that have continued to help stabilize the warbler's population as well. The U.S. Army at Fort Hood was able to protect the largest patch of oak juniper trees, but in 2007 they implemented the “Recovery Credit System”, selling conservation credits to surrounding landowners. The protected area, at 60,000 acres, would be cut to 10,000 acres. This proves to be difficult for groups monitoring and rehabilitating the species.
-	
-	
+<p class="bird-info" id="bird-5">
+	The golden-cheeked warbler was listed as endangered in 1990. The only time they can be found in the United States is in the oak-juniper woodlands of Central Texas. Once again, a big threat to the warbler's survival is the loss of its natural habitat: most of the juniper woodlands have been cleared for livestock and urban expansion, which reduces any nesting opportunities. There are several habitat restoration efforts that have continued to help stabilize the warbler's population as well. The U.S. Army at Fort Hood was able to protect the largest patch of oak juniper trees, but in 2007 they implemented the “Recovery Credit System”, selling conservation credits to surrounding landowners. The protected area, at 60,000 acres, would be cut to 10,000 acres. This proves to be difficult for groups monitoring and rehabilitating the species. <a href="#top">Back to top</a>.
 </p>
 </div>
 
 <h1 class="nene-title title">NENE</h1>
 <div class="nene-section sections">
 <img src="images/nene/nene_text.png" class="nene_text_img text_img"/>
-	<p class="bird-info">
-	Listed as an endangered species in 1967 under the Federal Endangered Species Act with recovery plan being published in 1983. The population once overflowed on the largest island before Captain James Cook arrived in 1778. The Maui population was extinct before 1890, and the decline accelerated during 1850 to 1900 from aggressive hunting and collecting of eggs. As they like to nest in golf courses, another contributing danger to the species are stray golf balls. Over 2,700 nene were released statewide on either public or private land managed by cooperative agreements between State and Federal resources in 2009. In 1951, there was an estimated 30 birds left of the population..
-	
-	
+
+<p class="bird-info" id="bird-6">
+	Listed as an endangered species in 1967 under the Federal Endangered Species Act with recovery plan being published in 1983. The population once overflowed on the largest island before Captain James Cook arrived in 1778. The Maui population was extinct before 1890, and the decline accelerated during 1850 to 1900 from aggressive hunting and collecting of eggs. As they like to nest in golf courses, another contributing danger to the species are stray golf balls. Over 2,700 nene were released statewide on either public or private land managed by cooperative agreements between State and Federal resources in 2009. In 1951, there was an estimated 30 birds left of the population. <a href="#top">Back to top</a>.
 </p>
 </div>
 
